--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div class="background">
-        <header>00
+        <header>
             <div class="logo">
                 <img src="css/img/logo.jpg" >
             </div>
