--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -210,7 +210,7 @@
 
     <!-- Gatilhos mentais -->
     <section class="gatilhos-section">
-        <div class="title-ranking">
+        <div class="title-gatilho">
             <h4 class="subtitle">Suas historias</h4>
             <h2 class="main-title-ranking">Cada avaliação conta uma historia</h2>
             <div class="line-main-title"></div>
